@@ -10,54 +10,102 @@ public abstract class DatabaseArtifactConfigExtension {
 
     public abstract ListProperty<MavenArtifact> getMavenArtifacts();
 
-    public MavenArtifact mavenArtifact(String id, String notation) {
-        return new MavenArtifact(id, id, notation, 3, List.of(), null);
+    public MavenArtifact mavenArtifact(String id, String gav) {
+        return new MavenArtifact(id, id, gav, 3, false, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifact(String id, String notation, int majorVersionSegments) {
-        return new MavenArtifact(id, id, notation, majorVersionSegments, List.of(), null);
+    public MavenArtifact mavenArtifact(String id, String gav, boolean check) {
+        return new MavenArtifact(id, id, gav, 3, check, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifact(String id, String notation, int majorVersionSegments, String... excludedVersionPatterns) {
-        return new MavenArtifact(id, id, notation, majorVersionSegments, Arrays.asList(excludedVersionPatterns), null);
+    public MavenArtifact mavenArtifact(String id, String gav, int majorVersionSegments) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, false, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifact(String id, String name, String notation) {
-        return new MavenArtifact(id, name, notation, 3, List.of(), null);
+    public MavenArtifact mavenArtifact(String id, String gav, int majorVersionSegments, boolean check) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, check, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifact(String id, String name, String notation, int majorVersionSegments) {
-        return new MavenArtifact(id, name, notation, majorVersionSegments, List.of(), null);
+    public MavenArtifact mavenArtifact(String id, String gav, int majorVersionSegments, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, false, Arrays.asList(excludedVersionPatterns), null);
     }
 
-    public MavenArtifact mavenArtifact(String id, String name, String notation, int majorVersionSegments, String... excludedVersionPatterns) {
-        return new MavenArtifact(id, name, notation, majorVersionSegments, Arrays.asList(excludedVersionPatterns), null);
+    public MavenArtifact mavenArtifact(String id, String gav, int majorVersionSegments, boolean check, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, check, Arrays.asList(excludedVersionPatterns), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String notation, String repositoryUrl) {
-        return new MavenArtifact(id, id, notation, 3, List.of(), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav) {
+        return new MavenArtifact(id, name, gav, 3, false, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String notation, int majorVersionSegments, String repositoryUrl) {
-        return new MavenArtifact(id, id, notation, majorVersionSegments, List.of(), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav, boolean check) {
+        return new MavenArtifact(id, name, gav, 3, check, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String notation, int majorVersionSegments, String repositoryUrl, String... excludedVersionPatterns) {
-        return new MavenArtifact(id, id, notation, majorVersionSegments, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav, int majorVersionSegments) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, false, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String notation, String repositoryUrl) {
-        return new MavenArtifact(id, name, notation, 3, List.of(), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav, int majorVersionSegments, boolean check) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, check, List.of(), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String notation, int majorVersionSegments, String repositoryUrl) {
-        return new MavenArtifact(id, name, notation, majorVersionSegments, List.of(), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav, int majorVersionSegments, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, false, Arrays.asList(excludedVersionPatterns), null);
     }
 
-    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String notation, int majorVersionSegments, String repositoryUrl, String... excludedVersionPatterns) {
-        return new MavenArtifact(id, name, notation, majorVersionSegments, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    public MavenArtifact mavenArtifact(String id, String name, String gav, int majorVersionSegments, boolean check, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, check, Arrays.asList(excludedVersionPatterns), null);
     }
 
-    public record MavenArtifact(String id, String name, String notation, int majorVersionSegments, List<String> excludedVersionPatterns, String repositoryUrl) implements Serializable {
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, String repositoryUrl) {
+        return new MavenArtifact(id, id, gav, 3, false, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, String repositoryUrl, boolean check) {
+        return new MavenArtifact(id, id, gav, 3, check, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, int majorVersionSegments, String repositoryUrl) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, false, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, int majorVersionSegments, String repositoryUrl, boolean check) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, check, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, int majorVersionSegments, String repositoryUrl, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, false, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String gav, int majorVersionSegments, String repositoryUrl, boolean check, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, id, gav, majorVersionSegments, check, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, String repositoryUrl) {
+        return new MavenArtifact(id, name, gav, 3, false, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, String repositoryUrl, boolean check) {
+        return new MavenArtifact(id, name, gav, 3, check, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, int majorVersionSegments, String repositoryUrl) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, false, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, int majorVersionSegments, String repositoryUrl, boolean check) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, check, List.of(), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, int majorVersionSegments, String repositoryUrl, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, false, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    }
+
+    public MavenArtifact mavenArtifactWithRepositoryUrl(String id, String name, String gav, int majorVersionSegments, String repositoryUrl, boolean check, String... excludedVersionPatterns) {
+        return new MavenArtifact(id, name, gav, majorVersionSegments, check, Arrays.asList(excludedVersionPatterns), repositoryUrl);
+    }
+
+    public record MavenArtifact(String id, String name, String gav, int majorVersionSegments, boolean check, List<String> excludedVersionPatterns, String repositoryUrl) implements Serializable {
     }
 }
